--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=466,21
+Pos=370,81
 Size=628,421
 Collapsed=0
 
@@ -17,4 +17,23 @@ Collapsed=0
 Pos=156,58
 Size=621,714
 Collapsed=0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Example: Long text display]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
 
