--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,27 +4,31 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=370,81
-Size=628,421
+Pos=864,18
+Size=313,406
 Collapsed=0
 
 [Window][Example: Log]
-Pos=60,60
-Size=500,400
+ViewportPos=666,330
+ViewportId=0xBF126D42
+Size=263,682
 Collapsed=0
 
 [Window][Example: Documents]
-Pos=156,58
-Size=621,714
+Pos=0,149
+Size=499,413
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Example: Property editor]
-Pos=60,60
-Size=430,450
+ViewportPos=931,754
+ViewportId=0x593C5C9B
+Size=700,258
 Collapsed=0
 
 [Window][Example: Console]
-Pos=60,60
+ViewportPos=1597,293
+ViewportId=0x46B5E99C
 Size=520,600
 Collapsed=0
 
@@ -33,7 +37,26 @@ Pos=60,60
 Size=520,600
 Collapsed=0
 
+[Window][DockSpace Demo]
+ViewportPos=666,292
+ViewportId=0x4647B76E
+Size=1280,720
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=0,564
+Size=1280,156
+Collapsed=0
+DockId=0x00000008,0
+
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
+
+[Docking][Data]
+DockSpace     ID=0x3BC79352 Pos=666,330 Size=1280,682 Split=Y
+  DockNode    ID=0x00000007 Parent=0x3BC79352 SizeRef=1280,524 Split=X
+    DockNode  ID=0x00000003 Parent=0x00000007 SizeRef=263,682 Selected=0xDBFE1153
+    DockNode  ID=0x00000004 Parent=0x00000007 SizeRef=700,682 CentralNode=1
+  DockNode    ID=0x00000008 Parent=0x3BC79352 SizeRef=1280,156 Selected=0x08F8367F
 
