--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,15 +4,16 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=864,18
-Size=313,406
+Pos=0,19
+Size=312,701
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Example: Log]
-ViewportPos=666,330
-ViewportId=0xBF126D42
-Size=263,682
+Pos=314,256
+Size=444,464
 Collapsed=0
+DockId=0x0000000A,0
 
 [Window][Example: Documents]
 Pos=0,149
@@ -27,10 +28,10 @@ Size=700,258
 Collapsed=0
 
 [Window][Example: Console]
-ViewportPos=1597,293
-ViewportId=0x46B5E99C
-Size=520,600
+Pos=760,19
+Size=520,701
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][Example: Long text display]
 Pos=60,60
@@ -38,8 +39,7 @@ Size=520,600
 Collapsed=0
 
 [Window][DockSpace Demo]
-ViewportPos=666,292
-ViewportId=0x4647B76E
+Pos=0,0
 Size=1280,720
 Collapsed=0
 
@@ -54,9 +54,15 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Pos=666,330 Size=1280,682 Split=Y
-  DockNode    ID=0x00000007 Parent=0x3BC79352 SizeRef=1280,524 Split=X
-    DockNode  ID=0x00000003 Parent=0x00000007 SizeRef=263,682 Selected=0xDBFE1153
-    DockNode  ID=0x00000004 Parent=0x00000007 SizeRef=700,682 CentralNode=1
-  DockNode    ID=0x00000008 Parent=0x3BC79352 SizeRef=1280,156 Selected=0x08F8367F
+DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=909,235 Size=1280,701 Split=X
+  DockNode          ID=0x00000005 Parent=0x3BC79352 SizeRef=758,701 Split=X
+    DockNode        ID=0x00000001 Parent=0x00000005 SizeRef=312,701 Selected=0xE87781F4
+    DockNode        ID=0x00000002 Parent=0x00000005 SizeRef=966,701 Split=Y
+      DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=1280,524 Split=X
+        DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=263,682 Selected=0xDBFE1153
+        DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=700,682 Split=Y
+          DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=444,235 CentralNode=1
+          DockNode  ID=0x0000000A Parent=0x00000004 SizeRef=444,464 Selected=0xDBFE1153
+      DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=1280,156 Selected=0x08F8367F
+  DockNode          ID=0x00000006 Parent=0x3BC79352 SizeRef=520,701 Selected=0xDE6E0C33
 
