--- a/Granola/Granola.vcxproj.filters
+++ b/Granola/Granola.vcxproj.filters
@@ -13,6 +13,9 @@
     <Filter Include="src\Granola\ImGui">
       <UniqueIdentifier>{EA542BC4-566B-295A-9FE2-B47B0B38FAE1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Granola\Renderer">
+      <UniqueIdentifier>{660B1F47-529A-A810-FBB8-BC0BE726B9B6}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\Platform">
       <UniqueIdentifier>{21CA02E5-0D2D-9289-B6B2-CA3FA2F45D0C}</UniqueIdentifier>
     </Filter>
@@ -72,8 +75,14 @@
     <ClInclude Include="src\Granola\MouseButtonCodes.h">
       <Filter>src\Granola</Filter>
     </ClInclude>
+    <ClInclude Include="src\Granola\Renderer\GraphicsContext.h">
+      <Filter>src\Granola\Renderer</Filter>
+    </ClInclude>
     <ClInclude Include="src\Granola\Window.h">
       <Filter>src\Granola</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h">
+      <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsInput.h">
       <Filter>src\Platform\Windows</Filter>
@@ -103,6 +112,9 @@
     </ClCompile>
     <ClCompile Include="src\Granola\Log.cpp">
       <Filter>src\Granola</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp">
       <Filter>src\Platform\Windows</Filter>
