--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,15 +4,16 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=963,11
-Size=312,701
+ViewportPos=1663,171
+ViewportId=0xE927CF2F
+Size=311,682
 Collapsed=0
 
 [Window][Example: Log]
-Pos=314,256
-Size=444,464
+ViewportPos=1016,422
+ViewportId=0xBF126D42
+Size=967,484
 Collapsed=0
-DockId=0x0000000A,0
 
 [Window][Example: Documents]
 Pos=0,149
@@ -21,10 +22,10 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Example: Property editor]
-ViewportPos=931,754
-ViewportId=0x593C5C9B
-Size=700,258
+Pos=1110,33
+Size=481,701
 Collapsed=0
+DockId=0x0000000C,0
 
 [Window][Example: Console]
 Pos=760,19
@@ -38,6 +39,8 @@ Size=520,600
 Collapsed=0
 
 [Window][DockSpace Demo]
+ViewportPos=928,206
+ViewportId=0x4647B76E
 Size=1280,720
 Collapsed=0
 
@@ -52,13 +55,13 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Pos=909,235 Size=1280,701 Split=X
+DockSpace         ID=0x3BC79352 Pos=928,244 Size=1280,682 Split=X
   DockNode        ID=0x00000005 Parent=0x3BC79352 SizeRef=758,701 Split=Y
     DockNode      ID=0x00000007 Parent=0x00000005 SizeRef=1280,524 Split=X
       DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=263,682 Selected=0xDBFE1153
-      DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=700,682 Split=Y
-        DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=444,235 CentralNode=1
-        DockNode  ID=0x0000000A Parent=0x00000004 SizeRef=444,464 Selected=0xDBFE1153
+      DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=700,682 Split=X
+        DockNode  ID=0x0000000B Parent=0x00000004 SizeRef=484,701 CentralNode=1
+        DockNode  ID=0x0000000C Parent=0x00000004 SizeRef=481,701 Selected=0xE7652686
     DockNode      ID=0x00000008 Parent=0x00000005 SizeRef=1280,156 Selected=0x08F8367F
   DockNode        ID=0x00000006 Parent=0x3BC79352 SizeRef=520,701 Selected=0xDE6E0C33
 
