--- a/Granola/Granola.vcxproj
+++ b/Granola/Granola.vcxproj
@@ -148,25 +148,28 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="src\Granola.h" />
-    <ClInclude Include="src\Granola\App.h" />
-    <ClInclude Include="src\Granola\Core.h" />
-    <ClInclude Include="src\Granola\EntryPoint.h" />
+    <ClInclude Include="src\Granola\Core\App.h" />
+    <ClInclude Include="src\Granola\Core\Base.h" />
+    <ClInclude Include="src\Granola\Core\EntryPoint.h" />
     <ClInclude Include="src\Granola\Events\ApplicationEvent.h" />
     <ClInclude Include="src\Granola\Events\Event.h" />
     <ClInclude Include="src\Granola\Events\KeyEvent.h" />
     <ClInclude Include="src\Granola\Events\MouseEvent.h" />
     <ClInclude Include="src\Granola\ImGui\ImGuiLayer.h" />
-    <ClInclude Include="src\Granola\Input.h" />
-    <ClInclude Include="src\Granola\KeyCodes.h" />
-    <ClInclude Include="src\Granola\Layer.h" />
-    <ClInclude Include="src\Granola\LayerStack.h" />
-    <ClInclude Include="src\Granola\Log.h" />
-    <ClInclude Include="src\Granola\MouseButtonCodes.h" />
+    <ClInclude Include="src\Granola\Core\Input.h" />
+    <ClInclude Include="src\Granola\Core\KeyCodes.h" />
+    <ClInclude Include="src\Granola\Core\Layer.h" />
+    <ClInclude Include="src\Granola\Core\LayerStack.h" />
+    <ClInclude Include="src\Granola\Core\Log.h" />
+    <ClInclude Include="src\Granola\Core\MouseCodes.h" />
     <ClInclude Include="src\Granola\Renderer\Buffer.h" />
     <ClInclude Include="src\Granola\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\Granola\Renderer\Renderer.h" />
     <ClInclude Include="src\Granola\Renderer\Shader.h" />
-    <ClInclude Include="src\Granola\Window.h" />
+    <ClInclude Include="src\Granola\Renderer\VertexArray.h" />
+    <ClInclude Include="src\Granola\Utilities\ColorUtilities.h" />
+    <ClInclude Include="src\Granola\Utilities\PlatformUtilities.h" />
+    <ClInclude Include="src\Granola\Core\Window.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
@@ -174,15 +177,17 @@
     <ClInclude Include="src\grlpch.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Granola\App.cpp" />
+    <ClCompile Include="src\Granola\Core\App.cpp" />
     <ClCompile Include="src\Granola\ImGui\ImGuiBuild.cpp" />
     <ClCompile Include="src\Granola\ImGui\ImGuiLayer.cpp" />
-    <ClCompile Include="src\Granola\Layer.cpp" />
-    <ClCompile Include="src\Granola\LayerStack.cpp" />
-    <ClCompile Include="src\Granola\Log.cpp" />
+    <ClCompile Include="src\Granola\Core\Layer.cpp" />
+    <ClCompile Include="src\Granola\Core\LayerStack.cpp" />
+    <ClCompile Include="src\Granola\Core\Log.cpp" />
     <ClCompile Include="src\Granola\Renderer\Buffer.cpp" />
     <ClCompile Include="src\Granola\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Granola\Renderer\Shader.cpp" />
+    <ClCompile Include="src\Granola\Renderer\VertexArray.cpp" />
+    <ClCompile Include="src\Granola\Utilities\ColorUtilities.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
