--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,8 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1960,106
-ViewportId=0xE927CF2F
+Pos=969,22
 Size=311,682
 Collapsed=0
 
