--- a/Granola/Granola.vcxproj.filters
+++ b/Granola/Granola.vcxproj.filters
@@ -100,6 +100,7 @@
     <ClInclude Include="src\Granola\Renderer\VertexArray.h" />
     <ClInclude Include="src\Granola\Utilities\PlatformUtilities.h" />
     <ClInclude Include="src\Granola\Utilities\ColorUtilities.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Granola\Core\App.cpp">
@@ -138,6 +139,7 @@
     <ClCompile Include="src\Granola\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Granola\Renderer\VertexArray.cpp" />
     <ClCompile Include="src\Granola\Utilities\ColorUtilities.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
