better renderer, abstracted opengl specific stuff, basic color commands

--- a/Granola/Granola.vcxproj.filters
+++ b/Granola/Granola.vcxproj.filters
@@ -101,6 +101,9 @@
     <ClInclude Include="src\Granola\Utilities\PlatformUtilities.h" />
     <ClInclude Include="src\Granola\Utilities\ColorUtilities.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
+    <ClInclude Include="src\Granola\Renderer\RendererAPI.h" />
+    <ClInclude Include="src\Granola\Renderer\RenderCommand.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Granola\Core\App.cpp">
@@ -140,6 +143,9 @@
     <ClCompile Include="src\Granola\Renderer\VertexArray.cpp" />
     <ClCompile Include="src\Granola\Utilities\ColorUtilities.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
+    <ClCompile Include="src\Granola\Renderer\RendererAPI.cpp" />
+    <ClCompile Include="src\Granola\Renderer\RenderCommand.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
