--- a/Granola/Granola.vcxproj
+++ b/Granola/Granola.vcxproj
@@ -164,7 +164,9 @@
     <ClInclude Include="src\Granola\Core\MouseCodes.h" />
     <ClInclude Include="src\Granola\Renderer\Buffer.h" />
     <ClInclude Include="src\Granola\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\Granola\Renderer\RenderCommand.h" />
     <ClInclude Include="src\Granola\Renderer\Renderer.h" />
+    <ClInclude Include="src\Granola\Renderer\RendererAPI.h" />
     <ClInclude Include="src\Granola\Renderer\Shader.h" />
     <ClInclude Include="src\Granola\Renderer\VertexArray.h" />
     <ClInclude Include="src\Granola\Utilities\ColorUtilities.h" />
@@ -172,6 +174,7 @@
     <ClInclude Include="src\Granola\Core\Window.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
@@ -185,12 +188,15 @@
     <ClCompile Include="src\Granola\Core\LayerStack.cpp" />
     <ClCompile Include="src\Granola\Core\Log.cpp" />
     <ClCompile Include="src\Granola\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\Granola\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\Granola\Renderer\Renderer.cpp" />
+    <ClCompile Include="src\Granola\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\Granola\Renderer\Shader.cpp" />
     <ClCompile Include="src\Granola\Renderer\VertexArray.cpp" />
     <ClCompile Include="src\Granola\Utilities\ColorUtilities.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
