--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=969,22
+ViewportPos=2191,230
+ViewportId=0xE927CF2F
 Size=311,682
 Collapsed=0
 
