--- a/Granola/Granola.vcxproj
+++ b/Granola/Granola.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="src\Granola\Core\App.h" />
     <ClInclude Include="src\Granola\Core\Base.h" />
     <ClInclude Include="src\Granola\Core\EntryPoint.h" />
+    <ClInclude Include="src\Granola\Core\Timestep.h" />
     <ClInclude Include="src\Granola\Events\ApplicationEvent.h" />
     <ClInclude Include="src\Granola\Events\Event.h" />
     <ClInclude Include="src\Granola\Events\KeyEvent.h" />
@@ -175,6 +176,7 @@
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
     <ClInclude Include="src\Granola\Renderer\OrthographicCamera.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
@@ -198,6 +200,7 @@
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
     <ClCompile Include="src\Granola\Renderer\OrthographicCamera.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
