--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=2191,230
+ViewportPos=1836,189
 ViewportId=0xE927CF2F
 Size=311,682
 Collapsed=0
@@ -49,6 +49,11 @@ Pos=0,564
 Size=1280,156
 Collapsed=0
 DockId=0x00000008,0
+
+[Window][Settings]
+Pos=48,458
+Size=501,242
+Collapsed=0
 
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
