--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,10 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1836,189
-ViewportId=0xE927CF2F
-Size=311,682
+ViewportPos=71,238
+ViewportId=0xA4D966FE
+Pos=517,0
+Size=427,682
 Collapsed=0
+DockId=0x00000009,0
 
 [Window][Example: Log]
 ViewportPos=1016,422
@@ -51,15 +53,30 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Settings]
-Pos=48,458
-Size=501,242
+ViewportPos=1792,209
+ViewportId=0xA4D966FE
+Size=589,421
 Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Debug]
+ViewportPos=1792,209
+ViewportId=0xA4D966FE
+Pos=0,423
+Size=589,294
+Collapsed=0
+DockId=0x0000000D,0
 
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
+DockNode          ID=0x00000001 Pos=1792,209 Size=589,717 Split=X
+  DockNode        ID=0x00000002 Parent=0x00000001 SizeRef=615,682 Split=Y Selected=0x54723243
+    DockNode      ID=0x0000000A Parent=0x00000002 SizeRef=589,421 Selected=0x54723243
+    DockNode      ID=0x0000000D Parent=0x00000002 SizeRef=589,294 Selected=0x392A5ADD
+  DockNode        ID=0x00000009 Parent=0x00000001 SizeRef=509,682 Selected=0xE87781F4
 DockSpace         ID=0x3BC79352 Pos=928,244 Size=1280,682 Split=X
   DockNode        ID=0x00000005 Parent=0x3BC79352 SizeRef=758,701 Split=Y
     DockNode      ID=0x00000007 Parent=0x00000005 SizeRef=1280,524 Split=X
